config/examples/ingress.http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
    - host: echo1.ere.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo1
                port:
                  number: 80
    - host: echo2.ere.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo2
                port:
                  number: 80
