config/examples/ingress.https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-starging"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - echo1.ere.io
        - echo2.ere.io
      secretName: echo-tls
  rules:
    - host: echo1.ere.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo1
                port:
                  number: 80
    - host: echo2.ere.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo2
                port:
                  number: 80
